# api-sweb/routes/consolas.js
@@ -10,7 +10,7 @@ router.put('/consolas/:id', consolasCtrl.update);
 router.delete('/consolas/:id', consolasCtrl.remove);
 router.get('/consolas/:consolaId/videojuegos/:videojuegoId', consolasCtrl.getVideojuegos);
 router.post('/consolas/:consolaId/videojuegos/:videojuegoId', consolasCtrl.addVideojuego);
-router.put('/consolas/:id/videojuegos', consolasCtrl.updateVideojuego);
+router.put('/consolas/:consolaId/videojuegos/:videojuegoOldId/:videojuegoId', consolasCtrl.updateVideojuego);
 router.delete('/consolas/:consolaId/videojuegos/:videojuegoId', consolasCtrl.removeVideojuego);
 
 module.exports = router;
