# api-sweb/routes/empresas.js
@@ -9,7 +9,7 @@ router.put('/empresas/:id', empresasCtrl.update);
 router.delete('/empresas/:id', empresasCtrl.remove);
 router.get('/empresas/:id/videojuegos', empresasCtrl.getVideojuegos);
 router.post('/empresas/:empresaId/consolas/:consolaId', empresasCtrl.addVideojuego);
-router.put('/empresas/:id/videojuegos', empresasCtrl.updateVideojuego);
+router.put('/empresas/:empresaId/consolas/:consolaOldId/:consolaId', empresasCtrl.updateVideojuego);
 router.delete('/empresas/:empresaId/consolas/:consolaId', empresasCtrl.removeVideojuego);
 
 module.exports = router;
