# openapi.yml
@@ -189,28 +189,6 @@ paths:
           description: Videojuego o consola no encontrada
         "500":
           description: Error del servidor
-    put:
-      summary: Actualizar un videojuego en una consola
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: videojuegoId
-          in: query
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Videojuego"
-      responses:
-        "200":
-          description: Videojuego actualizado en la consola
     delete:
       summary: Eliminar nombre de un videojuego a una consola usando sus IDs
       parameters:
@@ -227,6 +205,32 @@ paths:
       responses:
         "201":
           description: Videojuego eliminado correctamente
+        "404":
+          description: Videojuego o consola no encontrada
+        "500":
+          description: Error del servidor
+  /consolas/{consolaId}/videojuegos/{videojuegoOldId}/{videojuegoId}:
+    put:
+      summary: Actualizar nombre de un videojuego a una consola usando sus IDs
+      parameters:
+        - name: consolaId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: videojuegoOldId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: videojuegoId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "201":
+          description: Videojuego actualizado correctamente
         "404":
           description: Videojuego o consola no encontrada
         "500":
@@ -301,7 +305,6 @@ paths:
       responses:
         "200":
           description: Empresa eliminada
-
   /empresas/{id}/videojuegos:
     get:
       summary: Obtener videojuegos desarrollados por una empresa
@@ -314,6 +317,7 @@ paths:
       responses:
         "200":
           description: Lista de videojuegos desarrollados por la empresa
+    
   /empresas/{empresaId}/consolas/{consolaId}: 
     post:
       summary: Añadir nombre de una consola a una empresa usando sus IDs
@@ -335,30 +339,7 @@ paths:
           description: Empresa o consola no encontrada
         "500":
           description: Error del servidor
-    put:
-      summary: Actualizar un videojuego de la empresa
-      parameters:
-        - name: id
-          in: path
-          required: true
-          schema:
-            type: string
-        - name: videojuegoId
-          in: query
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: "#/components/schemas/Videojuego"
-      responses:
-        "200":
-          description: Videojuego actualizado para la empresa
     delete:
-      post:
       summary: Eliminar nombre de una consola a una empresa usando sus IDs
       parameters:
         - name: empresaId
@@ -378,6 +359,28 @@ paths:
           description: Empresa o consola no encontrada
         "500":
           description: Error del servidor
+  /empresas/{empresaId}/consolas/{consolaOldId}/{consolaId}:
+    put:
+      summary: Actualizar una consola de la empresa
+      parameters:
+        - name: empresaId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: consolaOldId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: consolaId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: Consola actualizada para la empresa
   /rawg/search:
     get:
       summary: Buscar videojuegos en la API externa RAWG
